Evi-ify About us section

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -129,49 +129,39 @@
       <div class="row">
         <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
           <div class="person text-center">
-            <img src="external/images/person_2.jpg" alt="Image" class="img-fluid rounded-circle w-50 mb-2">
-            <h3>John Rooster</h3>
-            <p class="position text-muted">Co-Founder, President</p>
-            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at consequatur unde molestiae
-              quidem provident voluptatum deleniti quo iste error eos est praesentium distinctio cupiditate tempore
-              suscipit inventore deserunt tenetur.</p>
+            <img src="external/images/lew_hex.jpg" alt="Image" class="img-fluid w-50 mb-2">
+            <h3>Lew Parker</h3>
+            <p class="position text-muted">President, Distinguished Engineer</p>
+            <p class="mb-4">Over the last 20 years, Lew has delivered software in a wide range
+              of technologies and industries. Lew has an MBA and MSIS from Boston University.</p>
             <ul class="ul-social-circle">
-              <li><a href="#"><span class="icon-facebook"></span></a></li>
-              <li><a href="#"><span class="icon-twitter"></span></a></li>
-              <li><a href="#"><span class="icon-linkedin"></span></a></li>
-              <li><a href="#"><span class="icon-instagram"></span></a></li>
+              <li><a href="https://www.linkedin.com/in/parkerl/" target="_blank"><span class="icon-linkedin"></span></a></li>
             </ul>
           </div>
         </div>
         <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
           <div class="person text-center">
-            <img src="external/images/person_3.jpg" alt="Image" class="img-fluid rounded-circle w-50 mb-2">
-            <h3>Tom Sharp</h3>
-            <p class="position text-muted">Co-Founder, COO</p>
-            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at consequatur unde molestiae
-              quidem provident voluptatum deleniti quo iste error eos est praesentium distinctio cupiditate tempore
-              suscipit inventore deserunt tenetur.</p>
+            <img src="external/images/kim_hex.png" alt="Image" class="img-fluid w-50 mb-2">
+            <h3>Kim Hendrick</h3>
+            <p class="position text-muted">Distinguished Engineer</p>
+            <p class="mb-4">Kim has over 20 years of experience as a software engineer,
+              team lead, and manager. Kim holds a degree in Computer Science from the College of Great
+              Falls.</p>
             <ul class="ul-social-circle">
-              <li><a href="#"><span class="icon-facebook"></span></a></li>
-              <li><a href="#"><span class="icon-twitter"></span></a></li>
-              <li><a href="#"><span class="icon-linkedin"></span></a></li>
-              <li><a href="#"><span class="icon-instagram"></span></a></li>
+              <li><a href="https://www.linkedin.com/in/kimdhendrick/" target="_blank"><span class="icon-linkedin"></span></a></li>
             </ul>
           </div>
         </div>
         <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="300">
           <div class="person text-center">
-            <img src="external/images/person_4.jpg" alt="Image" class="img-fluid rounded-circle w-50 mb-2">
-            <h3>Winston Hodson</h3>
-            <p class="position text-muted">Marketing</p>
-            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at consequatur unde molestiae
-              quidem provident voluptatum deleniti quo iste error eos est praesentium distinctio cupiditate tempore
-              suscipit inventore deserunt tenetur.</p>
+            <img src="external/images/david_hex.png" alt="Image" class="img-fluid w-50 mb-2">
+            <h3>David Madouros</h3>
+            <p class="position text-muted">Distinguished Engineer</p>
+            <p class="mb-4">David has more than 20 years of software experience working with a
+              variety of team and business sizes -- everything from 10-person startups
+              to Fortune 25 companies as a Software Engineer, Team Lead, and Manager.</p>
             <ul class="ul-social-circle">
-              <li><a href="#"><span class="icon-facebook"></span></a></li>
-              <li><a href="#"><span class="icon-twitter"></span></a></li>
-              <li><a href="#"><span class="icon-linkedin"></span></a></li>
-              <li><a href="#"><span class="icon-instagram"></span></a></li>
+              <li><a href="https://www.linkedin.com/in/david-madouros-a8bb938/" target="_blank"><span class="icon-linkedin"></span></a></li>
             </ul>
           </div>
         </div>
@@ -180,49 +170,39 @@
       <div class="row" style="padding-top: 30px">
         <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
           <div class="person text-center">
-            <img src="external/images/person_2.jpg" alt="Image" class="img-fluid rounded-circle w-50 mb-2">
-            <h3>John Rooster</h3>
-            <p class="position text-muted">Co-Founder, President</p>
-            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at consequatur unde molestiae
-              quidem provident voluptatum deleniti quo iste error eos est praesentium distinctio cupiditate tempore
-              suscipit inventore deserunt tenetur.</p>
+            <img src="external/images/andrew_hex.png" alt="Image" class="img-fluid w-50 mb-2">
+            <h3>Andrew Courter</h3>
+            <p class="position text-muted">Principal Engineer</p>
+            <p class="mb-4">Andrew has over 10 years of experience as a software engineer, team
+              lead, and software consultant. Andrew earned a MS and BS in Computer Science from
+              Texas Tech University.</p>
             <ul class="ul-social-circle">
-              <li><a href="#"><span class="icon-facebook"></span></a></li>
-              <li><a href="#"><span class="icon-twitter"></span></a></li>
-              <li><a href="#"><span class="icon-linkedin"></span></a></li>
-              <li><a href="#"><span class="icon-instagram"></span></a></li>
+              <li><a href="https://www.linkedin.com/in/andrew-courter-79126836/" target="_blank"><span class="icon-linkedin"></span></a></li>
             </ul>
           </div>
         </div>
         <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
           <div class="person text-center">
-            <img src="external/images/person_3.jpg" alt="Image" class="img-fluid rounded-circle w-50 mb-2">
-            <h3>Tom Sharp</h3>
-            <p class="position text-muted">Co-Founder, COO</p>
-            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at consequatur unde molestiae
-              quidem provident voluptatum deleniti quo iste error eos est praesentium distinctio cupiditate tempore
-              suscipit inventore deserunt tenetur.</p>
+            <img src="external/images/joe_hex.png" alt="Image" class="img-fluid w-50 mb-2">
+            <h3>Joe Santini</h3>
+            <p class="position text-muted">Principal Engineer</p>
+            <p class="mb-4">Joe has more than 10 years of experience working with a wide variety of
+              software architectures, from monoliths to complex microservices. Joe earned a MS in Systems Design and BS in Computer Science.</p>
             <ul class="ul-social-circle">
-              <li><a href="#"><span class="icon-facebook"></span></a></li>
-              <li><a href="#"><span class="icon-twitter"></span></a></li>
-              <li><a href="#"><span class="icon-linkedin"></span></a></li>
-              <li><a href="#"><span class="icon-instagram"></span></a></li>
+              <li><a href="https://www.linkedin.com/in/joesantini/" target="_blank"><span class="icon-linkedin"></span></a></li>
             </ul>
           </div>
         </div>
         <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="300">
           <div class="person text-center">
-            <img src="external/images/person_4.jpg" alt="Image" class="img-fluid rounded-circle w-50 mb-2">
-            <h3>Winston Hodson</h3>
-            <p class="position text-muted">Marketing</p>
-            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at consequatur unde molestiae
-              quidem provident voluptatum deleniti quo iste error eos est praesentium distinctio cupiditate tempore
-              suscipit inventore deserunt tenetur.</p>
+            <img src="external/images/mihir_hex.png" alt="Image" class="img-fluid w-50 mb-2">
+            <h3>Mihir Parikh</h3>
+            <p class="position text-muted">Senior Engineer</p>
+            <p class="mb-4">For the past five years Mihir has focused on developing software addressing
+              issues in clinical data collection, social determinants of health, and healthcare reporting. He
+              is pursuing a Masters in Data Science.</p>
             <ul class="ul-social-circle">
-              <li><a href="#"><span class="icon-facebook"></span></a></li>
-              <li><a href="#"><span class="icon-twitter"></span></a></li>
-              <li><a href="#"><span class="icon-linkedin"></span></a></li>
-              <li><a href="#"><span class="icon-instagram"></span></a></li>
+              <li><a href="https://www.linkedin.com/in/mihirsparikh/" target="_blank"><span class="icon-linkedin"></span></a></li>
             </ul>
           </div>
         </div>
@@ -324,7 +304,6 @@
       </div>
     </div>
   </section>
-
 
   <section class="site-section border-bottom bg-light" id="services-section">
     <div class="container">
