Add our strongly held values

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -222,79 +222,55 @@
       <div class="row">
         <div class="col-md-6 col-lg-4">
           <div class=" box-with-humber">
-            <h2 class="subsection-title">Agility</h2>
-            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et praesentium eos nulla qui
-              commodi consectetur beatae fugiat. Veniam iste rerum perferendis.</p>
-            <ul class="list-unstyled ul-check primary">
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-            </ul>
+            <h2 class="text-black">Agility</h2>
+            <p class="mb-4">
+              We adhere strongly, but not dogmatically, to the tenants of the Agile Manifesto, Twelve Principles of Agile Software, and Five Values of Extreme Programming. We adapt our process to minimize ceremony and maximize communication, efficiency and happiness.
+            </p>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-4">
           <div class=" box-with-humber">
             <h2 class="text-black">Pragmatic Idealism</h2>
-            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et praesentium eos nulla qui
-              commodi consectetur beatae fugiat. Veniam iste rerum perferendis.</p>
-            <ul class="list-unstyled ul-check primary">
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-            </ul>
+            <p class="mb-4">
+              We believe in continually evolving towards a set of ideals and dream of all the possibilities they can bring. Ideals define our long term strategies. Pragmatism defines our day-to-day tactics. Our ideals and business needs are constantly evolving and we adjust accordingly.
+            </p>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-4">
           <div class=" box-with-humber">
             <h2 class="text-black">Problem Solving</h2>
-            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et praesentium eos nulla qui
-              commodi consectetur beatae fugiat. Veniam iste rerum perferendis.</p>
-            <ul class="list-unstyled ul-check primary">
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-            </ul>
+            <p class="mb-4">
+              We make practical (often boring) technology choices. We don’t build science projects just because we are smart enough to build them. New technologies should be chosen based on the merits of solving the problem at hand.
+            </p>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-4">
           <div class=" box-with-humber">
             <h2 class="text-black">Communication</h2>
-            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et praesentium eos nulla qui
-              commodi consectetur beatae fugiat. Veniam iste rerum perferendis.</p>
-            <ul class="list-unstyled ul-check primary">
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-            </ul>
+            <p class="mb-4">
+              We believe that many problems can be addressed through better communication. We do not hoard information. We share our process and ideals freely and openly. We strive to be fearlessly transparent with ourselves, our team members, and our clients.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4">
+          <div class=" box-with-humber">
+            <h2 class="text-black">Courage</h2>
+            <p class="mb-4">
+              We have the courage to design/code for today; not tomorrow. We have the courage to throw away code that is obsolete. We have the courage to persist through complex problems. We have the courage to make architectural corrections. We have the courage to be transparent. We have the courage to simplify the code at every turn.
+            </p>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-4">
           <div class=" box-with-humber">
             <h2 class="text-black">Humility</h2>
-            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et praesentium eos nulla qui
-              commodi consectetur beatae fugiat. Veniam iste rerum perferendis.</p>
-            <ul class="list-unstyled ul-check primary">
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="col-md-6 col-lg-4">
-          <div class=" box-with-humber">
-            <h2 class="text-black">Another one</h2>
-            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et praesentium eos nulla qui
-              commodi consectetur beatae fugiat. Veniam iste rerum perferendis.</p>
-            <ul class="list-unstyled ul-check primary">
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-            </ul>
+            <p class="mb-4">
+              We check our egos at the door. A codebase is owned by all team members, from the best features, and most elegant implementations, to the worst bugs. We make mistakes sometimes, because we’re human, but rather than dwell on them we choose to fix and then learn from them.
+            </p>
           </div>
         </div>
       </div>
