Add services and finalize flare
15 pieces of flare

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -95,11 +95,11 @@
   <div class="site-section" id="about-section">
     <div class="container">
       <div class="row align-items-lg-center">
-        <div class="col-md-6 mb-5 mb-lg-0 position-relative">
-          <img src="external/images/about_1.jpg" class="img-fluid" alt="Image">
+        <div class="w3-hide-small col-md-6 mb-5 mb-lg-0 position-relative">
+          <img class="callout__image" src="images/ev-group.svg" />
           <div class="experience">
-            <span class="year">100 years</span>
-            <span class="caption">of combined experience</span>
+            <span class="year">EarthVectors</span>
+            <span class="caption">About us</span>
           </div>
         </div>
         <div class="col-md-5 ml-auto">
@@ -276,7 +276,7 @@
       </div>
 
       <div class="row justify-content-center" style="padding-bottom: 30px;">
-        <img class="callout__image" src="images/ev-group.svg" />
+        <img class="w3-hide-small" src="images/ev-lines.svg" />
       </div>
     </div>
   </section>
@@ -293,10 +293,17 @@
           <div class="unit-4 d-flex">
             <div class="unit-4-icon mr-4"><span class="text-primary icon-autorenew"></span></div>
             <div>
-              <h3>Test Driven Development</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi
-                at.</p>
-
+              <h3>Reduce Technical Debt</h3>
+              <p>
+                Technical debt holding you back?
+                Do you have a monolith? Are you in microservice hell?
+                Are changes increasingly painful?
+              </p>
+              <ul class="list-unstyled ul-check primary">
+                <li>Auditing code bases & engineering practices</li>
+                <li>Working with legacy code</li>
+                <li>Architectural transformation & Rails rescue</li>
+              </ul>
             </div>
           </div>
         </div>
@@ -304,10 +311,17 @@
           <div class="unit-4 d-flex">
             <div class="unit-4-icon mr-4"><span class="text-primary icon-backspace"></span></div>
             <div>
-              <h3>Pair Programming</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi
-                at.</p>
-
+              <h3>Business Alignment</h3>
+              <p>
+                Can’t see work moving through your organization?
+                Is your capacity a mystery?
+                Is work getting bogged down, but you don’t know where?
+              </p>
+              <ul class="list-unstyled ul-check primary">
+                <li>Value stream mapping</li>
+                <li>Bottleneck identification</li>
+                <li>Revealing hidden costs</li>
+              </ul>
             </div>
           </div>
         </div>
@@ -315,22 +329,36 @@
           <div class="unit-4 d-flex">
             <div class="unit-4-icon mr-4"><span class="text-primary icon-av_timer"></span></div>
             <div>
-              <h3>Short Feedback Loops</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae
-                eligendiat.</p>
+              <h3>Feedback</h3>
+              <p>
+                Little or no feedback on code quality, user value, and other metrics?
+                Can big ideas be broken down into small, visible, and valuable features?
+                Do production fixes take days or weeks?
+              </p>
+              <ul class="list-unstyled ul-check primary">
+                <li>Tiny experiments</li>
+                <li>Data driven feedback</li>
+                <li>Growth mindset</li>
+              </ul>
             </div>
           </div>
         </div>
-
 
         <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="300">
           <div class="unit-4 d-flex">
             <div class="unit-4-icon mr-4"><span class="text-primary icon-beenhere"></span></div>
             <div>
-              <h3>Iterative Processes</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi
-                at.</p>
-
+              <h3>Engineering</h3>
+              <p>
+                Do you need the project finished yesterday without sacrificing quality?
+                Infrequent releases to production?
+                Challenges with scaling to meet customer demands?
+              </p>
+              <ul class="list-unstyled ul-check primary">
+                <li>Test driven development</li>
+                <li>DevOps guidance</li>
+                <li>Monitoring, diagnostics & telemetry</li>
+              </ul>
             </div>
           </div>
         </div>
@@ -338,10 +366,20 @@
           <div class="unit-4 d-flex">
             <div class="unit-4-icon mr-4"><span class="text-primary icon-business_center"></span></div>
             <div>
-              <h3>Experimentation</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi
-                at.</p>
-
+              <h3>Agile and Lean Project Management</h3>
+              <p>
+                Need improved collaboration?
+                Have communication gaps?
+                Silos?
+                Handoffs?
+                Low morale?
+                Difficulty completing projects?
+              </p>
+              <ul class="list-unstyled ul-check primary">
+                <li>Agile coaching</li>
+                <li>Engineering culture and process revitalization</li>
+                <li>We get your team unstuck</li>
+              </ul>
             </div>
           </div>
         </div>
@@ -349,10 +387,17 @@
           <div class="unit-4 d-flex">
             <div class="unit-4-icon mr-4"><span class="text-primary icon-cloud_done"></span></div>
             <div>
-              <h3>Senior Staff Augmentation</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi
-                at.</p>
-
+              <h3>People</h3>
+              <p>
+                Struggling to find quality engineering talent?
+                Need experienced technical leadership?
+                Do you need new hires producing value immediately?
+              </p>
+              <ul class="list-unstyled ul-check primary">
+                <li>Senior staff augmentation</li>
+                <li>Interviewing, onboarding</li>
+                <li>Mentoring & Technical leadership</li>
+              </ul>
             </div>
           </div>
         </div>
