Do not render evi assets in mobile landscape mode.

--- a/public/stylesheets/content.css
+++ b/public/stylesheets/content.css
@@ -2,3 +2,9 @@
   height: 75%;
   width: 75%;
 }
+
+@media (max-width: 900px) and (orientation: landscape)  {
+  .hide__landscape {
+    display: none !important;
+  }
+}
