--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -95,14 +95,14 @@
   <div class="site-section" id="about-section">
     <div class="container">
       <div class="row align-items-lg-center">
-        <div class="w3-hide-small col-md-6 mb-5 mb-lg-0 position-relative">
+        <div class="w3-hide-small hide__landscape col-md-6 mb-5 mb-lg-0 position-relative">
           <img class="callout__image" src="images/ev-group.svg" />
           <div class="experience">
             <span class="year">EarthVectors</span>
             <span class="caption">About us</span>
           </div>
         </div>
-        <div class="col-md-5 ml-auto">
+        <div class="col-lg-5 ml-auto">
           <h2 class="section-title mb-3">Welcome To EarthVectors</h2>
           <p class="mb-4">The EarthVectors core team brings nearly 100 years of software engineering experience and 30
             years of experience in the healthcare domain.</p>
@@ -276,7 +276,7 @@
       </div>
 
       <div class="row justify-content-center" style="padding-bottom: 30px;">
-        <img class="w3-hide-small" src="images/ev-lines.svg" />
+        <img class="w3-hide-small hide__landscape" src="images/ev-lines.svg" />
       </div>
     </div>
   </section>
