update joe's eductation

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -187,7 +187,7 @@
             <h3>Joe Santini</h3>
             <p class="position text-muted">Principal Engineer</p>
             <p class="mb-4">Joe has more than 10 years of experience working with a wide variety of
-              software architectures, from monoliths to complex microservices. Joe earned a MS in Systems Design and BS in Computer Science.</p>
+              software architectures, from monoliths to complex microservices. Joe earned a MS in Systems Engineering and Computer Science and a BS in Computer Science.</p>
             <ul class="ul-social-circle">
               <li><a href="https://www.linkedin.com/in/joesantini/" target="_blank"><span class="icon-linkedin"></span></a></li>
             </ul>
